--- a/frontend/package.json
+++ b/frontend/package.json
@@ -35,7 +35,9 @@
   },
   "dependencies": {
     "babel-polyfill": "^6.23.0",
+    "d3": "^3.5.17",
     "isomorphic-fetch": "^2.2.1",
+    "prop-types": "^15.5.8",
     "react": "^15.5.4",
     "react-dom": "^15.5.4",
     "react-hot-loader": "^3.0.0-beta.6",
