--- a/frontend/package.json
+++ b/frontend/package.json
@@ -35,13 +35,17 @@
   },
   "dependencies": {
     "babel-polyfill": "^6.23.0",
+    "d3": "^3.5.17",
     "isomorphic-fetch": "^2.2.1",
+    "json-loader": "^0.5.4",
+    "prop-types": "^15.5.8",
     "react": "^15.5.4",
     "react-dom": "^15.5.4",
     "react-hot-loader": "^3.0.0-beta.6",
     "react-redux": "^5.0.4",
     "redux": "^3.6.0",
     "redux-logger": "^3.0.1",
-    "redux-thunk": "^2.2.0"
+    "redux-thunk": "^2.2.0",
+    "topojson": "^3.0.0"
   }
 }
