--- a/frontend/package.json
+++ b/frontend/package.json
@@ -36,10 +36,12 @@
   "dependencies": {
     "babel-polyfill": "^6.23.0",
     "d3": "^3.5.17",
+    "file-loader": "^0.11.1",
     "isomorphic-fetch": "^2.2.1",
     "json-loader": "^0.5.4",
     "prop-types": "^15.5.8",
     "react": "^15.5.4",
+    "react-bootstrap": "^0.31.0",
     "react-dom": "^15.5.4",
     "react-hot-loader": "^3.0.0-beta.6",
     "react-redux": "^5.0.4",
